# henne

./: README.md  depot.txt
src/: CMakeLists.txt  chemin.txt  main.cpp  main.hpp
src/core/: job_manager.cpp  job_manager.hpp  machine_state.cpp  machine_state.hpp  safety_monitor.cpp  safety_monitor.hpp
src/drying/: humidity_sensor.cpp  humidity_sensor.hpp  ir_leds.cpp  ir_leds.hpp
src/hardware/: ethercat_master.cpp  ethercat_master.hpp  linear_actuator.cpp  linear_actuator.hpp  piezo_head.cpp  piezo_head.hpp  pressure_sensor.cpp  pressure_sensor.hpp  temperature_sensor.cpp  tof_sensor.cpp  tof_sensor.hpp
src/ia/: edge_detection.cpp  edge_detection.hpp  model_inference.cpp  model_inference.hpp  realtime_controller.cpp  realtime_controller.hpp
src/ipc/: low_latency_server.cpp  shared_memory_ring.hpp  zeromq_pubsub.hpp
src/pattern/: spiralnet_deformer.cpp  spiralnet_deformer.hpp  svg_parser.cpp  svg_parser.hpp  trajectory_generator.cpp  trajectory_generator.hpp  zone_optimizer.cpp  zone_optimizer.hpp
src/preview/: aging_simulation.cpp  aging_simulation.hpp  henne_material.cpp  henne_material.hpp  renderer.cpp  renderer.hpp  skin_shader.cpp  skin_shader.hpp  websocket_stream.cpp  websocket_stream.hpp
src/safety/: emergency_stop.cpp  emergency_stop.hpp  hand_detection.cpp  hand_detection.hpp  thermal_protection.cpp  thermal_protection.hpp
src/scan3d/: curvature_map.cpp  curvature_map.hpp  mesh_reconstruction.cpp  mesh_reconstruction.hpp  realsense_capture.cpp  realsense_capture.hpp  zone_segmentation.cpp  zone_segmentation.hpp
src/utils/: json_helper.cpp  (+9 more)
(+47 files in other folders)
